--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,14 @@ body {
 }
 .editor-container.collapsed .CodeMirror-scroll {
   position: absolute;
+  overflow: hidden !important;
+}
+.expand-collapse-btn {
+  margin-left: .5rem;
+  background: none;
+  border: none;
+  color: white;
+  cursor: pointer;
 }
 
 
